--- a/index.html
+++ b/index.html
@@ -2,19 +2,26 @@
 <html lang="en-US">
 <head>
   <title>My First Section at Epicodus</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <div class="container">
+    <div class="jumbotron">
   <h1>My First Section at Epicodus</h1>
   <p>
     I've almost finished my first course section at Epicodus. Here are some of the things I've learned so far:
   </p>
-  <h2>Command Line</h2>
-  <ul>
+  <div class="card">
+    <div class="card-body">
+  <h2 class="card-title">Command Line</h2>
+  <ul class="catd-text">
     <li>Navigating my documents through the command line.</li>
     <li>Creating new files and folders through the command line.</li>
     <li>Moving and deleting files and folders through the command line.</li>
     <li>Retrieving my current location from the command line.</li>
   </ul>
+</div>
+</div>
   <h2>Git and GitHub</h2>
   <ul>
     <li>Initializing local Git repository, and create remote GitHub repositories.</li>
@@ -23,7 +30,7 @@
     <li>Branching a project to make multiple copies.</li>
     <li>Merging multiple Git branches back together.</li>
     <li>Cloning down a project from GitHub to my local machine.</li>
-    <li>Publishing a website on GitHub pages.</li>
+    <li class="bg-success">Publishing a website on GitHub pages.</li>
   </ul>
   <h2>HTML</h2>
   <ul>
@@ -41,14 +48,22 @@
     <li>Writing CSS rules to style particular elements in my HTML.</li>
     <li>Floating elements to create columns, sidebars, and other alignments.</li>
     <li>Padding, margins, and the box model.</li>
-    <li>How CSS cascades to apply styles.</li>
+    <li class="bg-success">How CSS cascades to apply styles.</li>
   </ul>
   <h2>Bootstrap</h2>
   <ul>
     <li>Downloading and installing Bootstrap.</li>
     <li>Adding Bootstrap styles to a website.</li>
     <li>Navigating Bootstrap documentation.</li>
-    <li>Creating websites with Bootstrap.</li>
+    <li class="bg-success">Creating websites with Bootstrap.</li>
   </ul>
+  <h2>Partnering</h2>
+  <blockquote class="blockquote">
+    <p>"It's been really good working with you!"</p>
+    <footer class="blockquote-footer">My partner the first day.</footer>
+  </blockquote>
+  
+</div>
+</div>  
 </body>
 </html>
